--- a/francaise.html
+++ b/francaise.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>À la française</title>
-    <link rel="stylesheet" href="menu.css" />
+    <link rel="stylesheet" href="style/menu.css" />
+    <link rel="stylesheet" href="style/menuTablette.css" />
+    <link rel="stylesheet" href="style/menuDesktop.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -22,7 +24,7 @@
           <a href="index.html"><i class="fas fa-arrow-left"></i></a>
           <div><img src="img/omf.svg" alt="logo ohmyfood" /></div>
         </div>
-        <img src="img/palette.jpg" alt="photo d'un plat" class="header__img" />
+        <div class="header__imgDiv"><img src="img/francaise.jpg" alt="photo d'un plat" class="header__img" /></div>
       </header>
 
       <main class="main">
@@ -33,7 +35,7 @@
             <div class="full"><i class="fas fa-heart"></i></div>
           </a>
         </div>
-
+<div class="main__choix">
         <div class="main__entrees">
           <h2>entrées</h2>
           <div class="main__bar"></div>
@@ -168,6 +170,7 @@
             </div>
           </div>
         </div>
+      </div>
         <button class="main__btn">Commander</button>
       </main>
 
