--- a/palette.html
+++ b/palette.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La palette du goût</title>
-    <link rel="stylesheet" href="menu.css" />
+    <link rel="stylesheet" href="style/menu.css" />
+    <link rel="stylesheet" href="style/menuTablette.css" />
+    <link rel="stylesheet" href="style/menuDesktop.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -22,7 +24,7 @@
           <a href="index.html"><i class="fas fa-arrow-left"></i></a>
           <div><img src="img/omf.svg" alt="logo ohmyfood" /></div>
         </div>
-        <img src="img/palette.jpg" alt="photo d'un plat" class="header__img" />
+        <div class="header__imgDiv"><img src="img/palette.jpg" alt="photo d'un plat" class="header__img" /></div>
       </header>
 
       <main class="main">
@@ -33,137 +35,138 @@
             <div class="full"><i class="fas fa-heart"></i></div>
           </a>
         </div>
+        <div class="main__choix">
+          <div class="main__entrees">
+            <h2>entrées</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Fricassée d'escargot</h3>
+                  <p class="main__desc">Au piment d'Espelette</p>
+                </div>
 
-        <div class="main__entrees">
-          <h2>entrées</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Fricassée d'escargot</h3>
-                <p class="main__desc">Au piment d'Espelette</p>
+                <p class="main__prix">25€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">25€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Foie gras de canard mi-cuit</h3>
+                  <p class="main__desc">Et ses copeaux de truffe noire</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
+                <p class="main__prix">35€</p>
 
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Foie gras de canard mi-cuit</h3>
-                <p class="main__desc">Et ses copeaux de truffe noire</p>
-              </div>
-
-              <p class="main__prix">35€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Oeuf au plat</h3>
-                <p class="main__desc">Assaisonné à la truffe sur lit de caviar</p>
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">20€</p>
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Oeuf au plat</h3>
+                  <p class="main__desc">Assaisonné à la truffe sur lit de caviar</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+                <p class="main__prix">20€</p>
 
-        <div class="main__plats">
-          <h2>plats</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Filet de boeuf aux herbes</h3>
-                <p class="main__desc">Accompagné de sa ribambelle de légumes</p>
-              </div>
-
-              <p class="main__prix">40€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Parmentier de queue de boeuf</h3>
-                <p class="main__desc">À la truffe noire sur sa purée de panais</p>
-              </div>
-
-              <p class="main__prix">35€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Filet de turbot</h3>
-                <p class="main__desc">Aux agrumes</p>
-              </div>
-
-              <p class="main__prix">44€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="main__desserts">
-          <h2>desserts</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Paris-Brest</h3>
-                <p class="main__desc">Revisité</p>
+          <div class="main__plats">
+            <h2>plats</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Filet de boeuf aux herbes</h3>
+                  <p class="main__desc">Accompagné de sa ribambelle de légumes</p>
+                </div>
+
+                <p class="main__prix">40€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">18€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Parmentier de queue de boeuf</h3>
+                  <p class="main__desc">À la truffe noire sur sa purée de panais</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <p class="main__prix">35€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
+              </div>
+
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Filet de turbot</h3>
+                  <p class="main__desc">Aux agrumes</p>
+                </div>
+
+                <p class="main__prix">44€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
+          </div>
 
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Macaron au chocolat d'exception</h3>
-                <p class="main__desc">Et glace à la vanille de Madagascar</p>
+          <div class="main__desserts">
+            <h2>desserts</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Paris-Brest</h3>
+                  <p class="main__desc">Revisité</p>
+                </div>
+
+                <p class="main__prix">18€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">22€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Macaron au chocolat d'exception</h3>
+                  <p class="main__desc">Et glace à la vanille de Madagascar</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <p class="main__prix">22€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
-            </div>
 
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Mousse au chocolat</h3>
-                <p class="main__desc">Au piment d'Espelette et à la truffe noire</p>
-              </div>
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Mousse au chocolat</h3>
+                  <p class="main__desc">Au piment d'Espelette et à la truffe noire</p>
+                </div>
 
-              <p class="main__prix">23€</p>
+                <p class="main__prix">23€</p>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
           </div>
