--- a/delice.html
+++ b/delice.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Le délice des sens</title>
-    <link rel="stylesheet" href="menu.css" />
+    <link rel="stylesheet" href="style/menu.css" />
+    <link rel="stylesheet" href="style/menuTablette.css" />
+    <link rel="stylesheet" href="style/menuDesktop.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -22,7 +24,7 @@
           <a href="index.html"><i class="fas fa-arrow-left"></i></a>
           <div><img src="img/omf.svg" alt="logo ohmyfood" /></div>
         </div>
-        <img src="img/palette.jpg" alt="photo d'un plat" class="header__img" />
+        <div class="header__imgDiv"><img src="img/delices.jpg" alt="photo d'un plat" class="header__img" /></div>
       </header>
 
       <main class="main">
@@ -33,137 +35,138 @@
             <div class="full"><i class="fas fa-heart"></i></div>
           </a>
         </div>
+        <div class="main__choix">
+          <div class="main__entrees">
+            <h2>entrées</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Tartare de thon</h3>
+                  <p class="main__desc">Assaisonné au yuzu</p>
+                </div>
 
-        <div class="main__entrees">
-          <h2>entrées</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Tartare de thon</h3>
-                <p class="main__desc">Assaisonné au yuzu</p>
+                <p class="main__prix">25€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">25€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Bouchée de homard croustillant</h3>
+                  <p class="main__desc">Et sa farandole de petits légumes</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
+                <p class="main__prix">35€</p>
 
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Bouchée de homard croustillant</h3>
-                <p class="main__desc">Et sa farandole de petits légumes</p>
-              </div>
-
-              <p class="main__prix">35€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Velouté de cèpes</h3>
-                <p class="main__desc">Aux truffes</p>
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">20€</p>
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Velouté de cèpes</h3>
+                  <p class="main__desc">Aux truffes</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+                <p class="main__prix">20€</p>
 
-        <div class="main__plats">
-          <h2>plats</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Poulet rôti aux herbes de Provence</h3>
-                <p class="main__desc">Et sa crème de truffe</p>
-              </div>
-
-              <p class="main__prix">40€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Langouste rôtie</h3>
-                <p class="main__desc">Et ses légumes de saison</p>
-              </div>
-
-              <p class="main__prix">35€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Côte de boeuf Angus</h3>
-                <p class="main__desc">Et sa purée de panais</p>
-              </div>
-
-              <p class="main__prix">44€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="main__desserts">
-          <h2>desserts</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Farandole de desserts</h3>
-                <p class="main__desc">Du chef</p>
+          <div class="main__plats">
+            <h2>plats</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Poulet rôti aux herbes de Provence</h3>
+                  <p class="main__desc">Et sa crème de truffe</p>
+                </div>
+
+                <p class="main__prix">40€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">18€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Langouste rôtie</h3>
+                  <p class="main__desc">Et ses légumes de saison</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <p class="main__prix">35€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
+              </div>
+
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Côte de boeuf Angus</h3>
+                  <p class="main__desc">Et sa purée de panais</p>
+                </div>
+
+                <p class="main__prix">44€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
+          </div>
 
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Crème brulée</h3>
-                <p class="main__desc">Revisitée</p>
+          <div class="main__desserts">
+            <h2>desserts</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Farandole de desserts</h3>
+                  <p class="main__desc">Du chef</p>
+                </div>
+
+                <p class="main__prix">18€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">22€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Crème brulée</h3>
+                  <p class="main__desc">Revisitée</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <p class="main__prix">22€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
-            </div>
 
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Tiramisu</h3>
-                <p class="main__desc">À la noisette</p>
-              </div>
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Tiramisu</h3>
+                  <p class="main__desc">À la noisette</p>
+                </div>
 
-              <p class="main__prix">23€</p>
+                <p class="main__prix">23€</p>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
           </div>
