--- a/delice.html
+++ b/delice.html
@@ -176,16 +176,18 @@
 
       <footer class="footer">
         <h2>ohmyfood</h2>
-        <div>
-          <div class="footer__icon"><i class="fas fa-utensils"></i></div>
-          <p>Proposer un restaurant</p>
+        <div class="footer__list">
+          <div>
+            <div class="footer__icon"><i class="fas fa-utensils"></i></div>
+            <a href="#">Proposer un restaurant</a>
+          </div>
+          <div>
+            <div class="footer__icon"><i class="fas fa-hands-helping iconwidth"></i></div>
+            <a href="#">Devenir partenaire</a>
+          </div>
+          <a href="#">Mentions légales</a>
+          <a href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
-        <div>
-          <div class="footer__icon"><i class="fas fa-hands-helping iconwidth"></i></div>
-          <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <p>Contact</p>
       </footer>
     </div>
   </body>
