--- a/francaise.html
+++ b/francaise.html
@@ -35,157 +35,159 @@
             <div class="full"><i class="fas fa-heart"></i></div>
           </a>
         </div>
-<div class="main__choix">
-        <div class="main__entrees">
-          <h2>entrées</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Tartare de poulpe acidulé</h3>
-                <p class="main__desc">Aux zestes d'orange</p>
+        <div class="main__choix">
+          <div class="main__entrees">
+            <h2>entrées</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Tartare de poulpe acidulé</h3>
+                  <p class="main__desc">Aux zestes d'orange</p>
+                </div>
+
+                <p class="main__prix">25€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">25€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Velouté de légumes d'antan</h3>
+                  <p class="main__desc">Carotte, panais, topinambour</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <p class="main__prix">35€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
+              </div>
+
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Soupe à l'oignon</h3>
+                  <p class="main__desc">Revisitée</p>
+                </div>
+
+                <p class="main__prix">20€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
+          </div>
 
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Velouté de légumes d'antan</h3>
-                <p class="main__desc">Carotte, panais, topinambour</p>
+          <div class="main__plats">
+            <h2>plats</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Coquilles Saint-Jacques</h3>
+                  <p class="main__desc">Accompagnées d'une purée de panais</p>
+                </div>
+
+                <p class="main__prix">40€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">35€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Magret de canard</h3>
+                  <p class="main__desc">Et parmentier de pommes de terre</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <p class="main__prix">35€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
+              </div>
+
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Pigeonneau d’Ille-et-Vilaine</h3>
+                  <p class="main__desc">Sur son lit de gnocchis aux légumes</p>
+                </div>
+
+                <p class="main__prix">44€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
+          </div>
 
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Soupe à l'oignon</h3>
-                <p class="main__desc">Revisitée</p>
+          <div class="main__desserts">
+            <h2>desserts</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Pétales de violettes glacés</h3>
+                  <p class="main__desc">Et purée de noisettes</p>
+                </div>
+
+                <p class="main__prix">18€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">20€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Fondant au chocolat</h3>
+                  <p class="main__desc">Revisité</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <p class="main__prix">22€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
+              </div>
+
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Millefeuille croustillant</h3>
+                  <p class="main__desc">Myrtilles et pâte d’amande</p>
+                </div>
+
+                <p class="main__prix">23€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-
-        <div class="main__plats">
-          <h2>plats</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Coquilles Saint-Jacques</h3>
-                <p class="main__desc">Accompagnées d'une purée de panais</p>
-              </div>
-
-              <p class="main__prix">40€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Magret de canard</h3>
-                <p class="main__desc">Et parmentier de pommes de terre</p>
-              </div>
-
-              <p class="main__prix">35€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Pigeonneau d’Ille-et-Vilaine</h3>
-                <p class="main__desc">Sur son lit de gnocchis aux légumes</p>
-              </div>
-
-              <p class="main__prix">44€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="main__desserts">
-          <h2>desserts</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Pétales de violettes glacés</h3>
-                <p class="main__desc">Et purée de noisettes</p>
-              </div>
-
-              <p class="main__prix">18€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Fondant au chocolat</h3>
-                <p class="main__desc">Revisité</p>
-              </div>
-
-              <p class="main__prix">22€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Millefeuille croustillant</h3>
-                <p class="main__desc">Myrtilles et pâte d’amande</p>
-              </div>
-
-              <p class="main__prix">23€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
         <button class="main__btn">Commander</button>
       </main>
 
       <footer class="footer">
         <h2>ohmyfood</h2>
-        <div>
-          <div class="footer__icon"><i class="fas fa-utensils"></i></div>
-          <p>Proposer un restaurant</p>
+        <div class="footer__list">
+          <div>
+            <div class="footer__icon"><i class="fas fa-utensils"></i></div>
+            <a href="#">Proposer un restaurant</a>
+          </div>
+          <div>
+            <div class="footer__icon"><i class="fas fa-hands-helping iconwidth"></i></div>
+            <a href="#">Devenir partenaire</a>
+          </div>
+          <a href="#">Mentions légales</a>
+          <a href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
-        <div>
-          <div class="footer__icon"><i class="fas fa-hands-helping iconwidth"></i></div>
-          <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <p>Contact</p>
       </footer>
     </div>
   </body>
