--- a/testmenu.html
+++ b/testmenu.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>omf - menu</title>
     <link rel="stylesheet" href="style/menu.css" />
+    <link rel="stylesheet" href="style/menuTablette.css" />
+    <link rel="stylesheet" href="style/menuDesktop.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -22,7 +24,7 @@
           <a href="index.html"><i class="fas fa-arrow-left"></i></a>
           <div><img src="img/omf.svg" alt="logo ohmyfood" /></div>
         </div>
-        <img src="img/palette.jpg" alt="photo d'un plat" class="header__img" />
+        <div class="header__imgDiv"><img src="img/palette.jpg" alt="photo d'un plat" class="header__img" /></div>
       </header>
 
       <main class="main">
@@ -33,137 +35,138 @@
             <div class="full"><i class="fas fa-heart"></i></div>
           </a>
         </div>
+        <div class="main__choix">
+          <div class="main__entrees">
+            <h2>entrées</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Plat</h3>
+                  <p class="main__desc">Description</p>
+                </div>
 
-        <div class="main__entrees">
-          <h2>entrées</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Plat</h3>
-                <p class="main__desc">Description</p>
+                <p class="main__prix">25€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">25€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Plat</h3>
+                  <p class="main__desc">Description</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
+                <p class="main__prix">25€</p>
 
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Plat</h3>
-                <p class="main__desc">Description</p>
-              </div>
-
-              <p class="main__prix">25€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Plat</h3>
-                <p class="main__desc">Description</p>
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">25€</p>
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Plat</h3>
+                  <p class="main__desc">Description</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+                <p class="main__prix">25€</p>
 
-        <div class="main__plats">
-          <h2>plats</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Plat</h3>
-                <p class="main__desc">Description</p>
-              </div>
-
-              <p class="main__prix">25€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Plat</h3>
-                <p class="main__desc">Description</p>
-              </div>
-
-              <p class="main__prix">25€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
-              </div>
-            </div>
-
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Plat</h3>
-                <p class="main__desc">Description</p>
-              </div>
-
-              <p class="main__prix">25€</p>
-
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="main__desserts">
-          <h2>desserts</h2>
-          <div class="main__bar"></div>
-          <div class="main__cards">
-            <div class="main__card delay-0">
-              <div class="main__txt">
-                <h3 class="main__title">Plat</h3>
-                <p class="main__desc">Description</p>
+          <div class="main__plats">
+            <h2>plats</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Plat</h3>
+                  <p class="main__desc">Description</p>
+                </div>
+
+                <p class="main__prix">25€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">25€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Plat</h3>
+                  <p class="main__desc">Description</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <p class="main__prix">25€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
+              </div>
+
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Plat</h3>
+                  <p class="main__desc">Description</p>
+                </div>
+
+                <p class="main__prix">25€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
+          </div>
 
-            <div class="main__card delay-1">
-              <div class="main__txt">
-                <h3 class="main__title">Plat</h3>
-                <p class="main__desc">Description</p>
+          <div class="main__desserts">
+            <h2>desserts</h2>
+            <div class="main__bar"></div>
+            <div class="main__cards">
+              <div class="main__card delay-0">
+                <div class="main__txt">
+                  <h3 class="main__title">Plat</h3>
+                  <p class="main__desc">Description</p>
+                </div>
+
+                <p class="main__prix">25€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
 
-              <p class="main__prix">25€</p>
+              <div class="main__card delay-1">
+                <div class="main__txt">
+                  <h3 class="main__title">Plat</h3>
+                  <p class="main__desc">Description</p>
+                </div>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <p class="main__prix">25€</p>
+
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
-            </div>
 
-            <div class="main__card delay-2">
-              <div class="main__txt">
-                <h3 class="main__title">Plat</h3>
-                <p class="main__desc">Description</p>
-              </div>
+              <div class="main__card delay-2">
+                <div class="main__txt">
+                  <h3 class="main__title">Plat</h3>
+                  <p class="main__desc">Description</p>
+                </div>
 
-              <p class="main__prix">25€</p>
+                <p class="main__prix">25€</p>
 
-              <div class="main__check">
-                <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                <div class="main__check">
+                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -173,16 +176,18 @@
 
       <footer class="footer">
         <h2>ohmyfood</h2>
-        <div>
-          <div class="footer__icon"><i class="fas fa-utensils"></i></div>
-          <p>Proposer un restaurant</p>
+        <div class="footer__list">
+          <div>
+            <div class="footer__icon"><i class="fas fa-utensils"></i></div>
+            <a href="#">Proposer un restaurant</a>
+          </div>
+          <div>
+            <div class="footer__icon"><i class="fas fa-hands-helping iconwidth"></i></div>
+            <a href="#">Devenir partenaire</a>
+          </div>
+          <a href="#">Mentions légales</a>
+          <a href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
-        <div>
-          <div class="footer__icon"><i class="fas fa-hands-helping iconwidth"></i></div>
-          <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <p>Contact</p>
       </footer>
     </div>
   </body>
