--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                   <h2>La Palette du goût</h2>
                   <p>Ménilmontant</p>
                 </div>
-                <a href="#" class="main__coeur">
+                <div class="main__coeur">
                   <div class="empty"><i class="far fa-heart"></i></div>
                   <div class="full"><i class="fas fa-heart"></i></div>
-                </a>
+                </div>
               </div>
             </div>
           </a>
@@ -87,10 +87,10 @@
                   <h2>La note enchantée</h2>
                   <p>Charonne</p>
                 </div>
-                <a href="#" class="main__coeur">
+                <div class="main__coeur">
                   <div class="empty"><i class="far fa-heart"></i></div>
                   <div class="full"><i class="fas fa-heart"></i></div>
-                </a>
+                </div>
               </div>
             </div>
           </a>
@@ -103,10 +103,10 @@
                   <h2>À la française</h2>
                   <p>Cité Rouge</p>
                 </div>
-                <a href="#" class="main__coeur">
+                <div class="main__coeur">
                   <div class="empty"><i class="far fa-heart"></i></div>
                   <div class="full"><i class="fas fa-heart"></i></div>
-                </a>
+                </div>
               </div>
             </div>
           </a>
@@ -119,10 +119,10 @@
                   <h2>Le délice des sens</h2>
                   <p>Folie-Méricourt</p>
                 </div>
-                <a href="#" class="main__coeur">
+                <div class="main__coeur">
                   <div class="empty"><i class="far fa-heart"></i></div>
                   <div class="full"><i class="fas fa-heart"></i></div>
-                </a>
+                </div>
               </div>
             </div>
           </a>
