--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
           <a href="palette.html">
             <div class="main__card">
               <img src="img/palette.jpg" alt="#" />
-              <div class="main__subt">
+              <div class="main__new"><p>Nouveau</p></div>
+              <div class="main__subtNew">
                 <div class="main__txt">
                   <h2>La Palette du goût</h2>
                   <p>Ménilmontant</p>
@@ -82,7 +83,8 @@
           <a href="note.html">
             <div class="main__card">
               <img src="img/note2.jpg" alt="#" />
-              <div class="main__subt">
+              <div class="main__new"><p>Nouveau</p></div>
+              <div class="main__subtNew">
                 <div class="main__txt">
                   <h2>La note enchantée</h2>
                   <p>Charonne</p>
