--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <div class="loader"></div>
     <div class="container">
       <header class="header">
         <div class="header__logo"><img src="img/omf.svg" alt="logo oh my food" /></div>
