--- a/note.html
+++ b/note.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <div class="loader"></div>
     <div class="container">
       <header class="header">
         <div class="header__logo">
