--- a/francaise.html
+++ b/francaise.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>À la française</title>
-    <link rel="stylesheet" href="style/menu.css" />
-    <link rel="stylesheet" href="style/menuTablette.css" />
-    <link rel="stylesheet" href="style/menuDesktop.css" />
+    <link rel="stylesheet" href="sass/menu/main.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
