--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="style/index.css" />
+    <link rel="stylesheet" href="sass/index/main.css" />
+<!--     <link rel="stylesheet" href="style/index.css" />
     <link rel="stylesheet" href="style/indexTablette.css" />
-    <link rel="stylesheet" href="style/indexDesktop.css" />
+    <link rel="stylesheet" href="style/indexDesktop.css" /> -->
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
