click on heart correction

--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
                   <p>Ménilmontant</p>
                 </div>
                 <div class="main__coeur">
-                  <div class="empty"><i class="far fa-heart"></i></div>
-                  <div class="full"><i class="fas fa-heart"></i></div>
+                  <a href="#">
+                    <div class="empty"><i class="far fa-heart"></i></div>
+                    <div class="full"><i class="fas fa-heart"></i></div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -89,8 +91,10 @@
                   <p>Charonne</p>
                 </div>
                 <div class="main__coeur">
-                  <div class="empty"><i class="far fa-heart"></i></div>
-                  <div class="full"><i class="fas fa-heart"></i></div>
+                  <a href="#">
+                    <div class="empty"><i class="far fa-heart"></i></div>
+                    <div class="full"><i class="fas fa-heart"></i></div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -105,8 +109,10 @@
                   <p>Cité Rouge</p>
                 </div>
                 <div class="main__coeur">
-                  <div class="empty"><i class="far fa-heart"></i></div>
-                  <div class="full"><i class="fas fa-heart"></i></div>
+                  <a href="#">
+                    <div class="empty"><i class="far fa-heart"></i></div>
+                    <div class="full"><i class="fas fa-heart"></i></div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -121,8 +127,10 @@
                   <p>Folie-Méricourt</p>
                 </div>
                 <div class="main__coeur">
-                  <div class="empty"><i class="far fa-heart"></i></div>
-                  <div class="full"><i class="fas fa-heart"></i></div>
+                  <a href="#">
+                    <div class="empty"><i class="far fa-heart"></i></div>
+                    <div class="full"><i class="fas fa-heart"></i></div>
+                  </a>
                 </div>
               </div>
             </div>
