--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </header>
 
       <nav class="nav">
-        <h1>Fonctionnement</h1>
+        <p class="h1">Fonctionnement</p>
         <div class="nav__cards">
           <div class="nav__card">
             <div class="nav__number"><p>1</p></div>
@@ -60,11 +60,11 @@
       </nav>
 
       <main class="main">
-        <h1>Restaurants</h1>
+        <p class="h1">Restaurants</p>
         <div class="main__cards">
           <a href="palette.html">
             <div class="main__card">
-              <img src="img/palette.jpg" alt="#" />
+              <img src="img/palette.jpg" alt="Assiette de la Palette du Goût" />
               <div class="main__new"><p>Nouveau</p></div>
               <div class="main__subtNew">
                 <div class="main__txt">
@@ -83,7 +83,7 @@
 
           <a href="note.html">
             <div class="main__card">
-              <img src="img/note2.jpg" alt="#" />
+              <img src="img/note2.jpg" alt="Assiette de la Note Enchantée" />
               <div class="main__new"><p>Nouveau</p></div>
               <div class="main__subtNew">
                 <div class="main__txt">
@@ -102,7 +102,7 @@
 
           <a href="francaise.html">
             <div class="main__card">
-              <img src="img/francaise.jpg" alt="#" />
+              <img src="img/francaise.jpg" alt="Assiette de à la Française" />
               <div class="main__subt">
                 <div class="main__txt">
                   <h2>À la française</h2>
@@ -120,7 +120,7 @@
 
           <a href="delice.html">
             <div class="main__card">
-              <img src="img/delices.jpg" alt="#" />
+              <img src="img/delices.jpg" alt="Assiette du Délice des Sens" />
               <div class="main__subt">
                 <div class="main__txt">
                   <h2>Le délice des sens</h2>
