city name input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header__logo"><img src="img/omf.svg" alt="logo oh my food" /></div>
         <div class="header__city">
           <i class="fas fa-map-marker-alt"></i>
-          <p>Paris, Belleville</p>
+          <input placeholder="Paris, Belleville"></input>
         </div>
         <div class="header__slogan">
           <h1>
