--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <div class="container">
       <header class="header">
         <div class="header__logo"><img src="img/omf.svg" alt="logo oh my food" /></div>
-        <div class="header__city">
+        <nav class="header__city">
           <i class="fas fa-map-marker-alt"></i>
           <input placeholder="Paris, Belleville" />
-        </div>
+        </nav>
         <div class="header__slogan">
           <h1>
             Réservez le menu qui <br />
@@ -38,26 +38,26 @@
         </div>
       </header>
 
-      <nav class="nav">
+      <section class="section">
         <p class="h1">Fonctionnement</p>
-        <div class="nav__cards">
-          <div class="nav__card">
-            <div class="nav__number"><p>1</p></div>
-            <div class="nav__icon"><i class="fas fa-mobile-alt"></i></div>
-            <p class="nav__txt">Choisissez un restaurant</p>
+        <div class="section__cards">
+          <div class="section__card">
+            <div class="section__number"><p>1</p></div>
+            <div class="section__icon"><i class="fas fa-mobile-alt"></i></div>
+            <p class="section__txt">Choisissez un restaurant</p>
           </div>
-          <div class="nav__card">
-            <div class="nav__number"><p>2</p></div>
-            <div class="nav__icon"><i class="fas fa-list-ul"></i></div>
-            <p class="nav__txt">Composez votre menu</p>
+          <div class="section__card">
+            <div class="section__number"><p>2</p></div>
+            <div class="section__icon"><i class="fas fa-list-ul"></i></div>
+            <p class="section__txt">Composez votre menu</p>
           </div>
-          <div class="nav__card purple">
-            <div class="nav__number"><p>3</p></div>
-            <div class="nav__icon"><i class="tuto__icon fas fa-store"></i></div>
-            <p class="nav__txt">Dégustez au restaurant</p>
+          <div class="section__card purple">
+            <div class="section__number"><p>3</p></div>
+            <div class="section__icon"><i class="tuto__icon fas fa-store"></i></div>
+            <p class="section__txt">Dégustez au restaurant</p>
           </div>
         </div>
-      </nav>
+      </section>
 
       <main class="main">
         <p class="h1">Restaurants</p>
