--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </header>
 
-      <section class="section">
+      <div class="section">
         <p class="h1">Fonctionnement</p>
         <div class="section__cards">
           <div class="section__card">
@@ -57,7 +57,7 @@
             <p class="section__txt">Dégustez au restaurant</p>
           </div>
         </div>
-      </section>
+      </div>
 
       <main class="main">
         <p class="h1">Restaurants</p>
