--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <div class="main__coeur">
                 <a>
                   <div class="empty"><i class="far fa-heart"></i></div>
-                  <div class="full"><i class="fas fa-heart"></i></div>
+                  <div class="full"><i class="fas fa-heart fa-gradient fa-gradient"></i></div>
                 </a>
               </div>
             </div>
@@ -94,7 +94,7 @@
               <div class="main__coeur">
                 <a >
                   <div class="empty"><i class="far fa-heart"></i></div>
-                  <div class="full"><i class="fas fa-heart"></i></div>
+                  <div class="full"><i class="fas fa-heart fa-gradient"></i></div>
                 </a>
               </div>
             </div>
@@ -112,7 +112,7 @@
               <div class="main__coeur">
                 <a >
                   <div class="empty"><i class="far fa-heart"></i></div>
-                  <div class="full"><i class="fas fa-heart"></i></div>
+                  <div class="full"><i class="fas fa-heart fa-gradient"></i></div>
                 </a>
               </div>
             </div>
@@ -130,7 +130,7 @@
               <div class="main__coeur">
                 <a >
                   <div class="empty"><i class="far fa-heart"></i></div>
-                  <div class="full"><i class="fas fa-heart"></i></div>
+                  <div class="full"><i class="fas fa-heart fa-gradient"></i></div>
                 </a>
               </div>
             </div>
