--- a/delice.html
+++ b/delice.html
@@ -31,7 +31,7 @@
           <h1>Le délice des sens</h1>
           <a  class="main__coeur">
             <div class="empty"><i class="far fa-heart"></i></div>
-            <div class="full"><i class="fas fa-heart"></i></div>
+            <div class="full"><i class="fas fa-heart fa-gradient"></i></div>
           </a>
         </div>
         <div class="main__choix">
